--- a/src/Blazor/RebacExperiments.Blazor/wwwroot/index.html
+++ b/src/Blazor/RebacExperiments.Blazor/wwwroot/index.html
@@ -9,37 +9,11 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="_content/Microsoft.FluentUI.AspNetCore.Components/css/reboot.css" rel="stylesheet" />
     <link href="RebacExperiments.Blazor.styles.css" rel="stylesheet" />
-    <style>
-        :root {
-            --neutral-fill-layer-rest: #ffffff;
-            color: #000000;
-        }
-
-        .loading-progress-text {
-            color: #000000;
-        }
-
-        @media(prefers-color-scheme: dark) {
-            :root {
-                --neutral-fill-layer-rest: #464646;
-                color: #ffffff;
-            }
-
-            .loading-progress-text {
-                color: #ffffff;
-            }
-        }
-
-        body,
-        #container {
-            font: 14px "Segoe UI Variable", "Segoe UI", sans-serif;
-            background-color: var(--neutral-fill-layer-rest);
-        }
-    </style>
-
 </head>
 
 <body>
+    <loading-theme storage-name="theme"></loading-theme>
+
     <div id="app">
         <svg class="loading-progress">
             <circle r="40%" cx="50%" cy="50%" />
@@ -54,8 +28,6 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="js/theme.js" type="module"></script>
-
 </body>
 
 </html>
